# autoresearchstudio

./: .gitignore  README.md  mathematical_model.tex
examples/cifar10/: autoresearch.yaml  prepare.py  program.md  train.py
examples/fashion_mnist/: autoresearch.yaml  prepare.py  program.md  train.py
examples/mnist/: autoresearch.db  autoresearch.yaml  prepare.py  program.md  train.py
package/: README.md  pyproject.toml
package/src/autoresearchstudio/: __init__.py  cli.py  config.py  judge.py  prompt.py  runner.py  templates.py  tracker.py
projects/test/: CLAUDE.md  autoresearch.yaml  prepare.py  program.md  train.py
webapp/config/: settings.py
webapp/dashboard/: admin.py  api.py  models.py  urls.py  views.py
webapp/dashboard/management/commands/: seed_demo.py
webapp/dashboard/migrations/: 0001_initial.py  0002_apikey_config.py  0002_experiment_timeout_seconds.py
webapp/dashboard/templates/dashboard/: base.html  experiment.html  index.html  login.html  project.html
webapp/dashboard/templates/dashboard/partials/: experiments_table.html  progress_bar.html
