[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoresearchstudio"
version = "0.3.2"
description = "Generalized autonomous ML research framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.scripts]
ars = "autoresearchstudio.cli:main"


